<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="120dp"
    android:minHeight="120dp"
    android:background="@drawable/gradient_pozadina">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/id_ikona_dnevna"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/dnevna_ikona"
        android:src="@drawable/nikabeli"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorIkona"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
</de.hdodenhof.circleimageview.CircleImageView>
    <TextView
        android:id="@+id/id_post_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/post_ili_ne"
        android:textAlignment="textEnd"
        android:textColor="@color/colorOrange"
        android:textSize="14sp"
        android:fontFamily="@font/mirosln"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_ikona_dnevna"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"/>

    <TextView
        android:id="@+id/id_svetitelj_dnevni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ime_svetitelja"
        android:textAlignment="center"
        android:textColor="@color/colorSiviText"
        android:textSize="18sp"
        android:fontFamily="@font/mirosln"
        app:layout_constraintBottom_toTopOf="@+id/id_datum_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_ikona_dnevna"
        app:layout_constraintTop_toBottomOf="@+id/id_post_label" />

    <TextView
        android:id="@+id/id_datum_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:paddingEnd="20dp"
        android:paddingStart="29dp"
        android:text="@string/_2020_godina"
        android:textColor="@color/colorTamnoSivo"
        android:textAlignment="textEnd"
        android:fontFamily="@font/mirosln"
        android:textStyle="italic"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>