<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:baselineAligned="false"
              android:backgroundTint="@color/colorPrimaryDark"
              android:background="@drawable/linear"
              android:layout_width="match_parent"
              android:layout_height="150dp">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_ikona_svetitelja"
                android:contentDescription="@string/jesus"
                android:layout_margin="10dp"
                android:src="@drawable/jesus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorOrange">
        </de.hdodenhof.circleimageview.CircleImageView>
    </LinearLayout>
    <LinearLayout
            android:layout_weight="1"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="90dp">
        <TextView
                android:id="@+id/id_ime_svetitelja"
                android:text="@string/ime_svetitelja"
                android:textColor="#FFFFFF"
                android:textStyle="italic"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/id_datum"
                android:text="@string/datum"
                app:layout_constraintTop_toBottomOf="@+id/id_ime_svetitelja"
                android:layout_marginTop="14dp"
                android:textSize="12sp"
                android:textAlignment="textEnd"
                android:textStyle="italic"
                android:textColor="@color/colorBanana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>