<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_simple"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


   <View
       android:id="@+id/bgView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniPostLabel
       android:id="@+id/idPostLabe"
       android:layout_width="wrap_content"
       android:layout_height="32dp"
       android:layout_marginTop="8dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/pravoslavnipostlabel"
       android:textAlignment="center"
       android:textColor="@color/colorBanana"
       android:textSize="22sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/bgView" />


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniGregorijanskiDatumLabel
       android:id="@+id/idGregorijanskiDatumLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/gregDatum"
       android:textAlignment="center"
       android:textColor="@color/colorSiviText"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idPostLabe" />

   <TextView
       android:id="@+id/idGregTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/novi_gregorijanski_datum"
       android:textAlignment="center"
       android:textColor="@color/colorTamnoSivo"
       android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idGregorijanskiDatumLabel" />


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavnaIkona
       android:id="@+id/idIkona"
       android:layout_width="wrap_content"
       android:layout_height="162dp"
       android:layout_marginTop="8dp"
       android:src="@drawable/ik_124"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idGregTextView" />

   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniSvetacLabel
       android:id="@+id/idSvetacLabel"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="4dp"
       android:layout_marginEnd="16dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/svetac_label"
       android:textAlignment="center"
       android:textColor="@color/colorSiviText"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idIkona" />


   <com.interfacemockup.kalendar.pravoslavnekalkulacije.PravoslavniJulijanskiDatumLabel
       android:id="@+id/idJulijanskiDatumLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/julijanski_datum"
       android:textAlignment="center"
       android:textColor="@color/colorBanana"
       android:textSize="18sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idSvetacLabel" />

   <TextView
       android:id="@+id/idJulTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:fontFamily="@font/mirosln"
       android:gravity="center"
       android:text="@string/stari_julijanski_kalendar"
       android:textAlignment="center"
       android:textColor="@color/colorTamnoSivo"
       android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idJulijanskiDatumLabel" />


   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical"
       android:padding="5dp"
       app:layout_constraintBottom_toTopOf="@+id/hw_danas_banner"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/idJulTextView">

      <LinearLayout
          android:id="@+id/id_prvi_linear_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent">


         <ImageView
             android:id="@+id/id_kalendar_imageA"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/selekcija_kalendara_"
             android:onClick="otvoriKalendar"
             android:padding="5dp"
             android:src="@drawable/ic_date_range_48px">

         </ImageView>

         <ImageView
             android:id="@+id/id_kalendar_imageB"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/katihizis_image"
             android:onClick="otvoriKatihizis"
             android:padding="5dp"
             android:src="@drawable/ic_krst">

         </ImageView>

         <ImageView
             android:id="@+id/id_kalendar_imageC"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/share_image"
             android:onClick="sharePravoslavca"
             android:padding="5dp"
             android:src="@drawable/ic_assignment_turned_in_48px">

         </ImageView>

         <ImageView
             android:id="@+id/id_kalendar_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/molitva_image"
             android:onClick="otvoriMolitvenik"
             android:padding="5dp"
             android:src="@drawable/ic_pan_tool_48px">

         </ImageView>

         <ImageView
             android:id="@+id/id_kalendar_imageE"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/info_image"
             android:onClick="otvoriInfo"
             android:padding="5dp"
             android:src="@drawable/ic_info_48px">

         </ImageView>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/id_drugi_linear_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent">

         <ImageView
             android:id="@+id/id_A"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/info_image"
             android:onClick="otvoriTortu"
             android:padding="5dp"
             android:src="@drawable/ic_content_paste_48px" />

         <ImageView
             android:id="@+id/id_B"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_big"
             android:backgroundTint="@color/colorBanana"
             android:contentDescription="@string/info_image"
             android:padding="5dp"
             android:src="@drawable/ic_info_48px"
             android:visibility="invisible" />

         <ImageView
             android:id="@+id/id_C"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_big_red"
             android:contentDescription="@string/info_image"
             android:padding="5dp"
             android:src="@drawable/ic_share_48px"
             android:visibility="invisible" />

         <ImageView
             android:id="@+id/id_D"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_big"
             android:backgroundTint="@color/colorBanana"
             android:contentDescription="@string/info_image"
             android:padding="5dp"
             android:src="@drawable/ic_info_48px"
             android:visibility="invisible" />

         <ImageView
             android:id="@+id/id_E"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/back_btn_blue"
             android:contentDescription="@string/info_image"
             android:onClick="otvori_danasnje_zitije"
             android:padding="5dp"
             android:src="@drawable/ic_unfold_more_48px" />

      </LinearLayout>
   </LinearLayout>

   <com.huawei.hms.ads.banner.BannerView
       android:id="@+id/hw_danas_banner"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       hwads:adId="v7yfo37tkh"
       hwads:bannerSize="BANNER_SIZE_320_50"
       app:layout_constraintBottom_toBottomOf="@+id/bgView"/>

</androidx.constraintlayout.widget.ConstraintLayout>


