<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/gradient_pozadina"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/idMessageIcon"
                android:contentDescription="@string/jesus"
                android:src="@drawable/jesus"
                android:foregroundGravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorOrange"
                android:layout_width="50dp"
                android:layout_height="50dp">
        </de.hdodenhof.circleimageview.CircleImageView>
    </LinearLayout>

    <LinearLayout
            android:layout_weight="11"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/gradient_pozadina"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_below="@+id/idTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:background="@drawable/gradient_pozadina"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/message"
            android:textColor="@color/colorSiviText"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>