<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_simple"
    android:weightSum="12"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ikona"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_height="162dp"
                android:contentDescription="@string/slika_svetitelja"
                app:srcCompat="@drawable/ik_124" />

            <TextView
                android:id="@+id/svetac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:textSize="26sp"
                android:fontFamily="@font/mirosln"
                android:padding="5dp"
                android:textColor="@color/colorSiviText"
                android:text="@string/ime_svetitelja" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/zitije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="Text Zitija Svetitelja"
                android:padding="10dp"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:text="@string/info_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorBanana"
                android:textSize="20sp"
                android:fontFamily="@font/mirosln" />

        </ScrollView>


    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/id_detail_kalendar"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-7920431183682527/5376456083">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>



</LinearLayout>