<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hwads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_simple"
    tools:context="com.interfacemockup.kalendar.DetailKalendar">

    <ImageView
        android:id="@+id/ikona"
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/slika_svetitelja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/svetac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ik_124" />

    <TextView
        android:id="@+id/svetac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:fontFamily="@font/mirosln"
        android:padding="5dp"
        android:textColor="@color/colorSiviText"
        android:text="@string/ime_svetitelja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ikona"
        app:layout_constraintBottom_toTopOf="@+id/zitije"/>

    <TextView
        android:id="@+id/zitije"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:autofillHints="Text Zitija Svetitelja"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/mirosln"
        android:inputType="none"
        android:isScrollContainer="true"
        android:lines="1000"
        android:padding="10dp"
        android:scrollbarThumbVertical="@color/colorIkona"
        android:scrollbars="vertical"
        android:text="@string/info_text"
        android:textAlignment="textStart"
        android:textColor="@color/colorIkona"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/hw_kalendar_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svetac"
        app:layout_constraintVertical_bias="1.0" />

    <com.huawei.hms.ads.banner.BannerView
        android:id="@+id/hw_kalendar_banner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        hwads:adId="a19e0ravav"
        hwads:bannerSize="BANNER_SIZE_320_50"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
